--- a/Expt 4/form.html
+++ b/Expt 4/form.html
@@ -12,6 +12,7 @@
         <br><br>
         <label for="">Username:</label>
         <input type="text" name="Username"><br><br>
+        <input type="text" name="Username"><br><br>
         <label for="">Password:</label>
         <input type="password" name="Password"><br><br>
         <input type="submit" value="Submit">
